--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ matrix:
 
 before_install:
     - sudo apt-get update
-    - pip install --upgrade pip
-    - pip install --upgrade setuptools
+    - sudo apt-get install --no-install-recommends -y libsdl1.2debian libglu1 python3-pip python3-setuptools
+    - pip3 install --upgrade pip
+    - pip3 install --upgrade setuptools
+
 
 install:
-    - sudo apt-get install --no-install-recommends -y libsdl1.2debian libglu1 python3-pip
+
     - pip install -r requirements.txt
     - bash tests/install_blender.sh ${BLENDER_VERSION}
     - source .envs
